--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,12 @@
+html,
 body {
+  height: 100%;
+  width: 100%;
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+}
+
+body > div,
+body > div > div {
+  height: 100%;
 }
